Refactor authentication code and add JWT token generation

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL = mongodb+srv://xuannvuongg:RAtfCWK2hhr6Ruhv@cluster0.htu49vg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = AHFNASJFHSIFU9384H
