--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "babel-plugin-module-resolver": "^5.0.0",
     "firebase": "^10.9.0",
     "firebase-functions": "^4.8.1",
     "react": "^18.2.0",
